RESOLVED FIXED 262945
WebKit MediaRecorderPrivate should not be refcounted
https://bugs.webkit.org/show_bug.cgi?id=262945
Summary WebKit MediaRecorderPrivate should not be refcounted
youenn fablet
Reported 2023-10-10 01:38:19 PDT
WebKit MediaRecorderPrivate should not be refcounted
Attachments
Radar WebKit Bug Importer
Comment 1 2023-10-10 01:38:33 PDT
youenn fablet
Comment 2 2023-10-10 01:41:57 PDT
EWS
Comment 3 2023-10-11 02:57:24 PDT
Committed 269195@main (5ac998d7f35a): <https://commits.webkit.org/269195@main> Reviewed commits have been landed. Closing PR #18887 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.