WebKit MediaRecorderPrivate should not be refcounted https://bugs.webkit.org/show_bug.cgi?id=262945 rdar://problem/116726041

Reviewed by Alex Christensen and Chris Dumez.

Given MediaRecorderPrivate is stored as a std::unique_ptr, it is best to not ref/deref.
Instead MediaRecorderPrivate stores a ref counted object that is observing GPUProcess connection closure.

* Source/WebKit/WebProcess/GPU/webrtc/MediaRecorderPrivate.cpp:
(WebKit::MediaRecorderPrivate::MediaRecorderPrivate):
(WebKit::MediaRecorderPrivate::startRecording):
(WebKit::MediaRecorderPrivate::gpuProcessConnectionDidClose):
* Source/WebKit/WebProcess/GPU/webrtc/MediaRecorderPrivate.h:

Canonical link: https://commits.webkit.org/269195@main